# ESP32-S3-Industrial-Protocol-Experiments

./: .gitignore  README.md
docs/: application-architecture-notes.md  onboarding.md  opcua-experiment-log.md  open62541-build-notes.md  usb-port-troubleshooting.md
firmware/ethernet_status/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/ethernet_status/main/: CMakeLists.txt  ethernet_status_main.c
firmware/modbus_tcp_probe/: CMakeLists.txt
firmware/modbus_tcp_probe/main/: CMakeLists.txt  modbus_tcp_probe_main.c
firmware/opcua_probe/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/opcua_probe/components/open62541/: CMakeLists.txt  ifaddrs.h  netdb.h  open62541.h  open62541_esp_time.c
firmware/opcua_probe/components/open62541/open62541/: config.h
firmware/opcua_probe/components/open62541/open62541/plugin/: eventloop.h
firmware/opcua_probe/main/: CMakeLists.txt  opcua_probe_main.c
